Lecture 6: Demo - Swap card over with a swipe gesture
Gesture recogniser added via the storyboard.

--- a/2013 Winter/SuperCard/SuperCard/Base.lproj/Main.storyboard
+++ b/2013 Winter/SuperCard/SuperCard/Base.lproj/Main.storyboard
@@ -20,6 +20,10 @@
                                 <rect key="frame" x="60" y="98" width="200" height="284"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <gestureRecognizers/>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="2PX-we-ZoO" appends="YES" id="Nlp-Qc-pAw"/>
+                                </connections>
                             </view>
                         </subviews>
                         <color key="backgroundColor" red="0.25098040699958801" green="0.50196081399917603" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -29,6 +33,11 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
+                <swipeGestureRecognizer direction="right" id="2PX-we-ZoO">
+                    <connections>
+                        <action selector="swipeCard:" destination="vXZ-lx-hvc" id="f7o-Nr-apL"/>
+                    </connections>
+                </swipeGestureRecognizer>
             </objects>
         </scene>
     </scenes>
